Fix not visible clock arrow icon in dark mode

--- a/app/resources/uiThemes/dark/dark.css
+++ b/app/resources/uiThemes/dark/dark.css
@@ -857,3 +857,10 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+
+.io-block .io-virtual-content .header svg {
+  stroke: #ffff;
+}
+
+
